# concept-tree

./: .gitignore  00_pipeline_anaphora_script.py  00_pipeline_run_coref_resolution.ipynb  00_pipeline_run_resolve_anaphora.ipynb  00_pipeline_split_files_in_dirs.ipynb  01_pipeline_clean_triples.ipynb  01_pipeline_run_coref_resolution.ipynb  01_pipeline_run_triplets_builder.ipynb  01_pipeline_text_to_graph.ipynb  02_pipeline_clusterize.ipynb  02_pipeline_clusterize_params.ipynb  02_pipeline_find_squeeze_param.ipynb  02_pipeline_run_coref_resolution.ipynb  03_pipeline_run_metrics.ipynb  04_pipeline_find_cliques.ipynb  04_pipeline_run_isomorphism.ipynb  README.md  _profile_build.prof  _profile_build.py  build_rus_graphs.ipynb  eng_anaphora.py  eng_neural_anaphora.py  eng_rulebased_anaphora.py  make_directed_graphs_from_spacy_coreferee_make_graphs.ipynb  make_eng_graphs.ipynb  make_eng_graphs.py  make_eng_graphs_prep.ipynb  make_eng_graphs_verb.ipynb  make_rus_graph.ipynb  nn-graph-makers.ipynb  pyproject.toml  requirements.txt  requirements_01_pipeline_text_to_graph.txt  requirements_02_pipeline.txt  requirements_anaphora_resolver.txt  rus_anaphora.ipynb  rus_anaphora.py  test_sort_by_cubes.ipynb  test_sort_ngrams.ipynb
corenlp_graph_maker/: corenlp_graph_maker_en.py
directed_graph/: edge.py  embedding_manager.py  embedding_manager_fasttext.py  graph.py  higher_dim_graph.py  make_graphs.py  make_spacy_coreferee_graphs.py  union_edge.py  vertex.py  visualize_graph.py
download_texts/: 00_pipeline_download_html.ipynb
embeddings/: preview_embeddings.ipynb
graph/: edge.py  graph.py  higher_dim_graph.py  make_graphs.ipynb  vertex.py  visualize.py
graph_metrics/: diameter.py  metrics.py
matching/: concurrent_fuzzy_rdf_match.py  embedding_to_eps_cube.py  fuzzy_rdf_match.py  sort_by_cubes.py
nn_graph_makers/: alennlp_anaphora_resolver.py  corenlp_coref_resolver_en.py  corenlp_triples_maker_en.py  find_free_ports.py  (+2 more)
(+15 files in other folders)
