[tool.poetry]
name = "concept-tree"
version = "0.1.0"
description = ""
authors = ["Кирилл Демехин <englishtea21@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
networkx = ">=3.4.2"
spacy = "==3.5"
nltk = ">=3.9.1"
numpy = "==1.26.4"
matplotlib = ">=3.10.1"
ipykernel = ">=6.29.5"
stanza = ">=1.10.1"
pandas = ">=2.2.3"
beautifulsoup4 = ">=4.13.3"
lxml = ">=5.3.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
